<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/tasks"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/groups"/>
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_run"
                android:title="@string/logout"/>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>
